# event-graph-rag

./: LICENSE  README.md  main.py  pyproject.toml
rag-server/: README.md
rag-server/scripts/: ingest.py  serve.py  test_query.py
rag-server/src/ingestion/: parser.py  pipeline.py  text_builder.py
rag-server/src/retrieval/: retriever.py
rag-server/src/server/: app.py
rag-server/src/store/: embedder.py  vector_store.py
rag-server/tests/: conftest.py  test_retriever.py  test_text_builder.py
scripts/: ingest.py
src/: config.py  dependencies.py
src/graph/: builder.py  query.py
src/ingestion/: parser.py  pipeline.py
src/models/: event.py  response.py
src/store/: persistence.py
streamlit-app/: .env.example  .gitignore  README.md  app.py  config.py  mock_rag_server.py  requirements.txt
streamlit-app/core/: chain.py  llm_client.py  prompt.py  rag_client.py
streamlit-app/docs/: implementation_plan.md  requirements.md  technical_spec.md
streamlit-app/docs/tasks/: D1_models.md  D2_config.md  D3_rag_client.md  D4_prompt.md  D5_llm_client.md  D6_chain.md  D7_ui.md  D8_app.md  T1_test_models.md  T2_test_config.md  T3_test_rag_client.md  (+5 more)
streamlit-app/models/: __init__.py  schema.py
streamlit-app/tests/: test_chain.py  test_config.py  test_e2e.py  test_llm_client.py  test_models.py  test_prompt.py  test_rag_client.py  test_ui.py  ui_error_stub_app.py  ui_stub_app.py
streamlit-app/ui/: __init__.py  chat.py  sidebar.py
tests/: test_graph_builder.py  test_graph_query.py  test_parser.py
tests/fixtures/: sample_events.jsonl  sample_nishikawa.json
